5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3985/executions/1791_1602.log
== TEST (2019-05-29 14:04:45) 
-- CODE:
from numpy import*
v= array(eval(input()))
i=0

while(i<size(v)):
	if(v[i]==min(v)):
		i=i+1
		print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:04:54) 
-- CODE:
from numpy import*
v= array(eval(input()))
i=0

while(i<size(v)):
	if(v[i]==min(v)):
		i=i+1
		print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:05:56) 
-- CODE:
from numpy import*
v= array(eval(input()))
i=0

while(i<size(v)):
	if(v[i]==min(v)):
		i=i+1
	print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:05:58) 
-- CODE:
from numpy import*
v= array(eval(input()))
i=0

while(i<size(v)):
	if(v[i]==min(v)):
		i=i+1
	print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:07:54) 
-- CODE:
from numpy import*
v= array(eval(input()))
i=0

while(i<size(v)):
	if(v[i]==min([v])):
		i=i+1
	print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:08:19) 
-- CODE:
from numpy import*
v= array(eval(input()))
i=0

while(i<size(v)):
	if(v[i]==min([v])):
		i=i+v[i]
	print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:09:24) 
-- CODE:
from numpy import*
v= array(eval(input()))
i=0

while(i<size(v)):
	if(v[i]==min(v)):
		i=i+v[i]
	print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:24:42) 
-- CODE:
from numpy import*
v= array(eval(input()))
i=0
j=0
while(i<size(v)):
	if(v[i]==min(v)):
		j=j+v[i]
	i=i+1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:27:12) 
-- CODE:
from numpy import*
v= array(eval(input()))
i=0
j=0
while(i<size(v)):
	if(v[i]==min(v)):
		j=j+v[i]
	i=i+1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:27:27) 
-- CODE:
from numpy import*
v= array(eval(input()))
i=0
j=0
while(i<size(v)):
	if(v[i]==min(v)):
		j=j+v[i]
	i=i+1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:28:28) 
-- CODE:
from numpy import*
v= array(eval(input()))
i=0
j=0
while(i<size(v)):
	if(v[i]==min(v)):
		j=j+v[i]
	i=i+1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:30:52) 
-- CODE:
from numpy import*
v= array(eval(input()))
i=0
j=0
while(i<size(v)):
	if(v[i]>=0):
		if(i== min(v))
		j=j+v[i]
	i=i+1
print(i)
-- ERROR:
File "XXXX", line 7
    if(i== min(v))
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:31:07) 
-- CODE:
from numpy import*
v= array(eval(input()))
i=0
j=0
while(i<size(v)):
	if(v[i]>=0):
		if(i== min(v)):
			j=j+v[i]
	i=i+1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:39:50) 
-- CODE:
from numpy import*
v= array(eval(input()))
i=0
j=0
while(i<size(v)):
	if(v[i]>=0):
		if(i== min(v)):
			j=j+v[i]
	i=i+1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:40:57) 
-- CODE:
from numpy import*
v= array(eval(input()))
i=0
j=0
while(i<size(v)):
	if(v[i]>=0):
		if(i== min(v)):
			j=j+v[i]
	i=i-1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:41:41) 
-- CODE:
from numpy import*
v= array(eval(input()))
i=0
j=0
while(i<size(v)):
	if(v[i]>=0):
		if(i== min(v)):
			j=j+v[i]
	i=i+1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:44:25) 
-- CODE:
from numpy import*
v= array(eval(input()))
i=0
j=0
while(i==size(v)):
	if(v[i]>=0):
		if(i== min(v)):
			j=j+v[i]
	i=i+1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:44:58) 
-- CODE:
from numpy import*
v= array(eval(input()))
i=0
j=0
while(i==size(v)):
	if(v[i]>=0):
		if(i== min(v)):
			j=j+v[i]
	i=i+1
print(i)
-- EXECUTION TIME:
0.439562
-- TEST CASE 1:
---- input:
[11.32,40.2,32,10]
---- correct output:
1
---- user output:
0
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
1
---- user output:
0
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
0
---- user output:
0
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:45:10) 
-- CODE:
from numpy import*
v= array(eval(input()))
i=0
j=0
while(i==size(v)):
	if(v[i]>=0):
		if(i== min(v)):
			j=j+v[i]
	i=i+1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:46:25) 
-- CODE:
from numpy import*
v= array(eval(input()))
i=0
j=0
while(i<size(v)):
	if(v[i]>=0):
		if(i== min(v)):
			j=j+v[i]
	i=i+1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:47:21) 
-- CODE:
from numpy import*
v= array(eval(input()))
i=0
j=0
while(i<size(v)):
	if(v[i]>=0):
		if(i== min(v)):
			j=j+v[i]
	i=i+1
print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:49:48) 
-- CODE:
from numpy import*
v= array(eval(input()))
i=0
j=0
while(i<size(v)):
	if(v[i]==min(v)):
		j=j+1
	i=i+1
print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:50:13) 
-- CODE:
from numpy import*
v= array(eval(input()))
i=0
j=0
while(i<size(v)):
	if(v[i]==min(v)):
		j=j+1
	i=i+1
print(j)
-- EXECUTION TIME:
0.479336
-- TEST CASE 1:
---- input:
[11.32,40.2,32,10]
---- correct output:
1
---- user output:
1
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
1
---- user output:
1
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
0
---- user output:
1
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:50:21) 
-- CODE:
from numpy import*
v= array(eval(input()))
i=0
j=0
while(i<size(v)):
	if(v[i]==min(v)):
		j=j+1
	i=i+1
print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:52:09) 
-- CODE:
from numpy import*
v= array(eval(input()))
i=0
j=0
while(i<size(v)):
	if(v[i]==min(v)):
		j=j+1
	i=i+1
print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:52:09) 
-- CODE:
from numpy import*
v= array(eval(input()))
i=0
j=0
while(i<size(v)):
	if(v[i]==min(v)):
		j=j+1
	i=i+1
print(j)
-- EXECUTION TIME:
0.531774
-- TEST CASE 1:
---- input:
[11.32,40.2,32,10]
---- correct output:
1
---- user output:
1
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
1
---- user output:
1
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
0
---- user output:
1
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:54:17) 
-- CODE:
from numpy import*
v= array(eval(input()))
i=0
j=0
while(i<size(v)):
	if(v[i]==min(v)):
		j=j+v[i]
	i=i+1
print(j)
-- EXECUTION TIME:
0.511789
-- TEST CASE 1:
---- input:
[11.32,40.2,32,10]
---- correct output:
1
---- user output:
10.0
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
1
---- user output:
32.0
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
0
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:54:20) 
-- CODE:
from numpy import*
v= array(eval(input()))
i=0
j=0
while(i<size(v)):
	if(v[i]==min(v)):
		j=j+v[i]
	i=i+1
print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:54:35) 
-- CODE:
from numpy import*
v= array(eval(input()))
i=0
j=0
while(i<size(v)):
	if(v[i]==min(v)):
		j=j+min(v)
	i=i+1
print(j)
-- EXECUTION TIME:
0.344271
-- TEST CASE 1:
---- input:
[11.32,40.2,32,10]
---- correct output:
1
---- user output:
10.0
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
1
---- user output:
32.0
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
0
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:54:37) 
-- CODE:
from numpy import*
v= array(eval(input()))
i=0
j=0
while(i<size(v)):
	if(v[i]==min(v)):
		j=j+min(v)
	i=i+1
print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:56:12) 
-- CODE:
from numpy import*
v= array(eval(input()))
i=0
j=0
while(i<size(v)):
	if(v[i]==min(v)):
		j=j+min(v)
	i=i+1
print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:57:11) 
-- CODE:
from numpy import*
v= array(eval(input()))
i=0
j=0
while(i<size(v)):
	if(v[i]==max(v)):
		j=j+max(v)
	i=i+1
print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:58:24) 
-- CODE:
from numpy import*
v= array(eval(input()))
i=0
j=0
while(i<size(v)):
	if(v[i]==max(v)):
		j=j+max(v)
	i=i+1
print(j[max[v]])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:58:26) 
-- CODE:
from numpy import*
v= array(eval(input()))
i=0
j=0
while(i<size(v)):
	if(v[i]==max(v)):
		j=j+max(v)
	i=i+1
print(j[max[v]])
-- EXECUTION TIME:
0.361036
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/1602/main.py", line 9, in <module>
    print(j[max[v]])
TypeError: 'builtin_function_or_method' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:58:31) 
-- CODE:
from numpy import*
v= array(eval(input()))
i=0
j=0
while(i<size(v)):
	if(v[i]==max(v)):
		j=j+max(v)
	i=i+1
print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:01:21) 
-- CODE:
from numpy import*
v= array(eval(input()))
i=0
j=0
while(i<size(v)):
	if(v[i]==max(v)):
		j=j+max(v)
	i=i+1
print(max(v))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:01:29) 
-- CODE:
from numpy import*
v= array(eval(input()))
i=0
j=0
while(i<size(v)):
	if(v[i]==max(v)):
		j=j+max(v)
	i=i+1
print(max(v))
-- EXECUTION TIME:
0.39
-- TEST CASE 1:
---- input:
[11.32,40.2,32,10]
---- correct output:
1
---- user output:
40.2
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
1
---- user output:
44.0
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
0
---- user output:
23
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:01:34) 
-- CODE:
from numpy import*
v= array(eval(input()))
i=0
j=0
while(i<size(v)):
	if(v[i]==max(v)):
		j=j+max(v)
	i=i+1
print(j
-- ERROR:
File "XXXX", line 10
    
           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:01:36) 
-- CODE:
from numpy import*
v= array(eval(input()))
i=0
j=0
while(i<size(v)):
	if(v[i]==max(v)):
		j=j+max(v)
	i=i+1
print(j
-- ERROR:
File "XXXX", line 10
    
           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:01:38) 
-- CODE:
from numpy import*
v= array(eval(input()))
i=0
j=0
while(i<size(v)):
	if(v[i]==max(v)):
		j=j+max(v)
	i=i+1
print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:01:42) 
-- CODE:
from numpy import*
v= array(eval(input()))
i=0
j=0
while(i<size(v)):
	if(v[i]==max(v)):
		j=j+max(v)
	i=i+1
print(j)
-- EXECUTION TIME:
0.449206
-- TEST CASE 1:
---- input:
[11.32,40.2,32,10]
---- correct output:
1
---- user output:
40.2
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
1
---- user output:
44.0
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
0
---- user output:
23
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:01:44) 
-- CODE:
from numpy import*
v= array(eval(input()))
i=0
j=0
while(i<size(v)):
	if(v[i]==max(v)):
		j=j+max(v)
	i=i+1
print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:02:25) 
-- CODE:
from numpy import*
v= array(eval(input()))
i=0
j=0
while(i<size(v)):
	if(v[i]==max(v)):
		j=j+1
	i=i+1
print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:02:51) 
-- CODE:
from numpy import*
v= array(eval(input()))
i=0
j=0
while(i<size(v)):
	if(v[i]==max(v)):
		j=j+1
	i=i+1
print(j)
-- EXECUTION TIME:
0.475371
-- TEST CASE 1:
---- input:
[11.32,40.2,32,10]
---- correct output:
1
---- user output:
1
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
1
---- user output:
1
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
0
---- user output:
1
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:03:33) 
-- CODE:
from numpy import*
v= array(eval(input()))
i=0
j=0
while(i<size(v)):
	if(v[i]==max(v)):
		j=j+v[i]
	i=i+1
print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:04:01) 
-- CODE:
from numpy import*
v= array(eval(input()))
i=0
j=0
while(i<size(v)):
	if(v[i]==max(v)):
		j=j+v[i]
	i=i+1
print(j)
-- EXECUTION TIME:
0.423699
-- TEST CASE 1:
---- input:
[11.32,40.2,32,10]
---- correct output:
1
---- user output:
40.2
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
1
---- user output:
44.0
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
0
---- user output:
23
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:04:06) 
-- CODE:
from numpy import*
v= array(eval(input()))
i=0
j=0
while(i<size(v)):
	if(v[i]==max(v)):
		j=j+v[i]
	i=i+1
print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:06:08) 
-- CODE:
from numpy import*
v= array(eval(input()))
i=0
j=0
while(i<size(v)):
	if(v[i]==max(v)):
		j=j+(v[i]==max(v))
	i=i+1
print(j)
-- EXECUTION TIME:
0.362201
-- TEST CASE 1:
---- input:
[11.32,40.2,32,10]
---- correct output:
1
---- user output:
1
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
1
---- user output:
1
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
0
---- user output:
1
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:06:13) 
-- CODE:
from numpy import*
v= array(eval(input()))
i=0
j=0
while(i<size(v)):
	if(v[i]==max(v)):
		j=j+(v[i]==max(v))
	i=i+1
print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:06:38) 
-- CODE:
from numpy import*
v= array(eval(input()))
i=0
j=0
while(i<size(v)):
	if(v[i]==max(v)):
		j=j+(v[i]==max(v))
	i=i+1
print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:07:12) 
-- CODE:
from numpy import*
v= array(eval(input()))
i=0
j=0
while(i<size(v)):
	if(v[i]==max(v)):
		j=j+max(v)
	i=i+1
print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:08:48) 
-- CODE:
from numpy import*
v= array(eval(input()))
i=0
j=0
while(i<size(v)):
	if(v[i]==max(v)):
		j=j+(v[max(v)])
	i=i+1
print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:08:51) 
-- CODE:
from numpy import*
v= array(eval(input()))
i=0
j=0
while(i<size(v)):
	if(v[i]==max(v)):
		j=j+(v[max(v)])
	i=i+1
print(j)
-- EXECUTION TIME:
0.390124
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/1602/main.py", line 7, in <module>
    j=j+(v[max(v)])
IndexError: only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:08:59) 
-- CODE:
from numpy import*
v= array(eval(input()))
i=0
j=0
while(i<size(v)):
	if(v[i]==max(v)):
		j=j+max(v)
	i=i+1
print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:20:32) 
-- CODE:
from numpy import*
v= array(eval(input()))
i=0
j=0
while(i<size(v)):
	if(v[i]==max(v)):
		j=j+1
	i=i+1
print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:23:16) 
-- CODE:
from numpy import*
v= array(eval(input()))
i=0
j=0
while(i<size(v)):
	if(v[i]==max(v)):
		j=j+1
	i=i+1
print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:24:19) 
-- CODE:
from numpy import*
v= array(eval(input()))
i=0
j=0
while(i<size(v)):
	if(v[i]==max(v)):
	j=j+1
	i=i+1
print(j)
-- ERROR:
File "XXXX", line 7
    j=j+1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:24:24) 
-- CODE:
from numpy import*
v= array(eval(input()))
i=0
j=0
while(i<size(v)):
	if(v[i]==max(v)):
	j=j+1
	i=i+1
print(j)
-- EXECUTION TIME:
0.13867
-- ERROR:
  File "/home/codebench/codes/1791/1602/main.py", line 7
    j=j+1
    ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:24:32) 
-- CODE:
from numpy import*
v= array(eval(input()))
i=0
j=0
while(i<size(v)):
	if(v[i]==max(v)):
		j=j+1
	i=i+1
print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:25:19) 
-- CODE:
from numpy import*
v= array(eval(input()))
i=0
j=0
while(i<size(v)):
	if(v[i]==max(v)):
		j=j+1
	i=i+1
print(j)
-- EXECUTION TIME:
0.441941
-- TEST CASE 1:
---- input:
[11.32,40.2,32,10]
---- correct output:
1
---- user output:
1
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
1
---- user output:
1
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
0
---- user output:
1
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:27:22) 
-- CODE:
from numpy import*
v= array(eval(input()))
i=0
j=0
while(i<size(v)):
	if(v[i]==max(v)):
		j=j+i
	i=i+1
print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:27:25) 
-- CODE:
from numpy import*
v= array(eval(input()))
i=0
j=0
while(i<size(v)):
	if(v[i]==max(v)):
		j=j+i
	i=i+1
print(j)
-- EXECUTION TIME:
0.474625
-- TEST CASE 1:
---- input:
[11.32,40.2,32,10]
---- correct output:
1
---- user output:
1
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
1
---- user output:
1
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
0
---- user output:
0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
